--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://unpkg.com/vue@next"></script>
+    <script src="https://unpkg.com/vue@latest"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
     <title>Document</title>
@@ -31,7 +31,7 @@
           </div>
 
           <div class="col-sm-1">
-            <button id="button" v-on:click="calculate" class="btn btn-primary">=</button>
+            <button id="button" @click="calculate" class="btn btn-primary">=</button>
           </div>
 
           <div class="col-sm-3">
